# open-source-ai

./: .gitmodules  DOCKER_QUICK_START.md  LICENSE  PERFORMANCE_RESULTS.md  README.md  SOLUTION_DOCKER.md  docker-compose.gpu-alternative.yml  env.docker.example  env.example  fix-dockerfile.py  install-gpu-docker.ps1  pyproject.toml  quick_start.py  requirements-baseline.txt  requirements-trtllm.txt  setup_dev.py  test-commands-fix.md
.github/workflows/: ci.yml
agents/: Agentic RAG V2 (2).json  README.md
agents/ai-sdk/guardrails/guardrails-ia/: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  main.ts  package-lock.json  package.json  replacements.txt  serveur-simple.ts  test-complet.cjs  test-simple.cjs  tsconfig.json
agents/ai-sdk/guardrails/guardrails-ia/api/: chat.ts  guardrail-prompt.ts  sante.ts
agents/ai-sdk/guardrails/guardrails-ia/client/: composants.tsx  racine.tsx  tailwind.css
agents/ai-sdk/guardrails/guardrails-ia/config/: environnement.ts
agents/ai-sdk/guardrails/guardrails-ia/scripts/: deploiement.sh
agents/context-engineering-pour-tes-agents-ia/: .gitignore  README.md  slide.md
agents/context-engineering-pour-tes-agents-ia/assets/: minia-context-agentit.jfif
agents/langgraph_agent_entreprise_analytic/: .env.example  .gitignore  README.md  langgraph.json  requirements.txt  start_dev.py  test_crawl4ai.py
agents/langgraph_agent_entreprise_analytic/agent/: __init__.py  chat_graph.py  enrich_graph.py  models.py  tools.py
compute/optimisation-inference/: .env.example  CORRECTION_URGENTE.md  INSTALL_GPU_DOCKER.md  Makefile  QUICK_COMMANDS.md  SETUP.md  docker-compose.yml  docker-run.sh  test-gpu.ps1
compute/optimisation-inference/docker/: Dockerfile.baseline  README.md  docker-compose.yml
compute/optimisation-inference/docker/trtllm/: Dockerfile
compute/optimisation-inference/docs/: introduction-inference.md  introduction-optimisation-inference.md
compute/optimisation-inference/inference_optim_llm/engines/: baseline.py  trt.py
compute/optimisation-inference/inference_optim_llm/utils/: timing.py
compute/optimisation-inference/optimum-llm-tensorrt-llm-demo/: START_HERE.md  fix_windows_setup.py  install-gpu-simple.ps1  requirements-dev.txt  test-commands.md  test-gpu-direct.ps1  test_final.py
compute/optimisation-inference/optimum-llm-tensorrt-llm-demo/docker/: Dockerfile.trtllm
compute/optimisation-inference/optimum-llm-tensorrt-llm-demo/docker/baseline/: Dockerfile  requirements.txt
compute/optimisation-inference/optimum-llm-tensorrt-llm-demo/reports/: baseline.jsonl  test_batch.jsonl  test_medium.jsonl  trtllm.jsonl
compute/optimisation-inference/optimum-llm-tensorrt-llm-demo/scripts/: run_baseline.py  run_trtllm.py  validate_setup.py
compute/optimisation-inference/tensor-rt-llm/: .gitignore  Makefile  NVIDIA_SETUP.md  QUICKSTART.md  README.md  config.example.env  docker-compose.yml  run_benchmark.ps1  run_benchmark_direct.ps1  setup_nvidia_auth.ps1  setup_nvidia_auth.sh  tensorrt_llm_benchmark_colab.ipynb
compute/optimisation-inference/tensor-rt-llm/docker/: Dockerfile
compute/optimisation-inference/tensor-rt-llm/scripts/: bench_pytorch.sh  bench_trt.sh  build_engine.sh  compare.py  run_all.sh  validate_setup.py
compute/optimisation-inference/tests/: test_cli.py
compute/synthetic-data/synthetic-data-llm-gen/: README.md  hr_records_example.csv  requirements.txt  synthetic_data_gen.ipynb
data/: prompts.txt  prompts_long.txt  prompts_medium.txt
docker/: test_tensorrt.py
docker/trtllm/: build_engine.sh  requirements.txt
inference_optim_llm/: cli.py  config.py
inference_optim_llm/core/: metrics.py
reports/: baseline-fallback.jsonl
scripts/: benchmark.py  download_model.py  export_results.py
tests/: test_builder.py  test_metrics.py
